--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Lilian Berton
-![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
+image: https://octodex.github.com/images/yaktocat.png
