--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-#theme: jekyll-theme-minimal
+theme: jekyll-theme-minimal
 url: "http://lberton.github.io"
 baseurl: ""
-title: Lilian Berton
+title: Lilian Bertonn
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: "https://avatars3.githubusercontent.com/u/13876182?s=460&v=4"
 title-img: https://avatars3.githubusercontent.com/u/13876182?s=460&v=4
