--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ name: Your Name
 description: Web Developer from Somewhere
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-logo: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+logo: https://avatars3.githubusercontent.com/u/13876182?s=460&v=4
