--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,14 @@ theme: jekyll-theme-minimal
 #
 # This file contains configuration flags to customize your site
 #
-title: Lilian Bertonn
+title: Lilian Berton
 # Name of your site (displayed in the header)
 name: Your Name
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Linked In: "https://www.linkedin.com/in/lilian-berton-3a208824/"
+description: Instagram: https://www.instagram.com/lilyberton/?hl=pt-br
+description: CV: http://lattes.cnpq.br/9064767888093340  
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 logo: https://avatars3.githubusercontent.com/u/13876182?s=460&v=4
