--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ name: Your Name
 
 # Short bio or description (displayed in the header)
 description: Linked In: "https://www.linkedin.com/in/lilian-berton-3a208824/"
-description: Instagram: https://www.instagram.com/lilyberton/?hl=pt-br
-description: CV: http://lattes.cnpq.br/9064767888093340  
+#description: Instagram: https://www.instagram.com/lilyberton/?hl=pt-br
+#description: CV: http://lattes.cnpq.br/9064767888093340  
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 logo: https://avatars3.githubusercontent.com/u/13876182?s=460&v=4
