--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@ title: Lilian Berton
 name: Your Name
 
 # Short bio or description (displayed in the header)
-description: Linked In: https://www.linkedin.com/in/lilian-berton-3a208824/
+description: blabla
+#Linked In: https://www.linkedin.com/in/lilian-berton-3a208824/
 #description: Instagram: https://www.instagram.com/lilyberton/?hl=pt-br
 #description: CV: http://lattes.cnpq.br/9064767888093340  
 
